2010-07-13  Ivan Maidanski <ivmai@mail.ru>

	* gc_dlopen.c (disable_gc_for_dlopen): Update the comment.
	* gc_dlopen.c (dlopen): Ditto.
	* include/gc.h: Update copyright header.
	* include/gc.h (GC_enable_incremental): Refine the comment.
	* include/gc.h (DECLSPEC_NORETURN): Define macro as empty if
	missing (only for Win32).
	* include/gc.h (GC_ExitThread): Use DECLSPEC_NORETURN.
	* win32_threads.c (GC_ExitThread): Ditto.
	* include/gc.h (GC_endthreadex): Add a comment.

2010-05-31  Ivan Maidanski <ivmai@mail.ru> (really Alexander Belchenko)

	* include/cord.h: Fix typos.
	* include/cord.h: Expand all tabs to spaces; remove trailing
	spaces at EOLn.

2010-05-22  Ivan Maidanski <ivmai@mail.ru>

	* Makefile.in: Regenerate.
	* configure: Ditto.

2010-05-22  Ivan Maidanski <ivmai@mail.ru>

	* Makefile.am (EXTRA_DIST): Add "CMakeLists.txt" and
	"tests/CMakeLists.txt".
	* doc/doc.am (dist_pkgdata_DATA): Add "doc/README.cmake".

2010-05-21  Ivan Maidanski <ivmai@mail.ru> (really Bradley Smith and
                                            Stefano Rivera)

	* mach_dep.c (NO_GETCONTEXT): Also define if AVR32.
	* include/private/gcconfig.h (AVR32): New macro (also define the
	supplementary macros for the target).
	* include/private/thread_local_alloc (USE_COMPILER_TLS): Don't
	define for AVR32.

2010-05-13  Ivan Maidanski <ivmai@mail.ru> (mostly really Uros Bizjak)

	* tests/leak_test.c (main): Explicitly define as returning int
	(to prevent a spurious test failure on some Linux/alpha targets).
	* tests/thread_leak_test.c (main): Ditto.
	* tests/thread_leak_test.c: Initialize GC_find_leak in the main
	thread (before GC_INIT) only.
	* tests/leak_test.c (main): Use GC_set_find_leak() instead of
	accessing GC_find_leak directly.
	* tests/thread_leak_test.c (main): Ditto.

2010-05-05  Ivan Maidanski <ivmai@mail.ru>

	* include/gc.h (GC_find_leak, GC_finalize_on_demand,
	GC_java_finalization, GC_dont_expand, GC_no_dls,